POWR-243 Set up styles for alerts

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -6759,10 +6759,19 @@ a.text-dark:hover, a.text-dark:focus {
 
 /**
  * @file
- * Visual styles for comments in Barrio.
+ * Visual styles for alerts in Cloudy.
  */
-div.always-show div.portland-alert {
-  display: block; }
+.portland-alert .close {
+  font-size: 2.5rem; }
+
+.portland-alert .fa {
+  font-size: 3rem; }
+  .portland-alert .fa.fa-exclamation-circle {
+    color: #dc3545; }
+  .portland-alert .fa.fa-exclamation-triangle {
+    color: #ffb81c; }
+  .portland-alert .fa.fa-info-circle {
+    color: #418fde; }
 
 /**
  * @file
