--- a/web/themes/custom/cloudy/scss/components/alerts.scss
+++ b/web/themes/custom/cloudy/scss/components/alerts.scss
@@ -1,8 +1,23 @@
 /**
  * @file
- * Visual styles for comments in Barrio.
+ * Visual styles for alerts in Cloudy.
  */
 
- div.always-show div.portland-alert {
-  display: block; }
+.portland-alert {
+  .close {
+    font-size: 2.5rem;
+  }
+  .fa {
+    font-size: 3rem;
+    &.fa-exclamation-circle {
+      color: $red;
+    }
+    &.fa-exclamation-triangle {
+      color: $yellow;
+    }
+    &.fa-info-circle {
+      color: $accent-shade;
+    }
+  }
+}
 
