POWR-133 Use bootstrap classes for image alignment.

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -6844,11 +6844,13 @@ summary {
 .field--label-inline .field__item {
   display: inline-block; }
 
-.image-align-left {
-  float: left; }
+@media all and (min-width: 720px) {
+  .image-align {
+    width: 50%; } }
 
-.image-align-right {
-  float: right; }
+@media all and (max-width: 720px) {
+  .image-align {
+    width: 100%; } }
 
 /**
  * @file
