--- a/web/themes/custom/cloudy/scss/components/field.scss
+++ b/web/themes/custom/cloudy/scss/components/field.scss
@@ -1,3 +1,4 @@
+
 /**
  * @file
  * Visual styles for Bootstrap Barrio's field components.
@@ -113,9 +114,14 @@
     display: inline-block
 }
 
-.image-align-left {
-    float: left;
+
+@media all and (min-width: 720px) {
+    .image-align {
+        width: 50%;
+    }
 }
-.image-align-right {
-    float: right;
+@media all and (max-width: 720px) {
+    .image-align {
+        width: 100%;
+    }
 }
