POWR-133 Add image caption.

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -6844,11 +6844,11 @@ summary {
 .field--label-inline .field__item {
   display: inline-block; }
 
-@media all and (min-width: 720px) {
+@media all and (min-width: 560px) {
   .image-align {
-    width: 50%; } }
+    max-width: 50%; } }
 
-@media all and (max-width: 720px) {
+@media all and (max-width: 560px) {
   .image-align {
     width: 100%; } }
 
