--- a/web/themes/custom/cloudy/scss/components/field.scss
+++ b/web/themes/custom/cloudy/scss/components/field.scss
@@ -115,12 +115,12 @@
 }
 
 
-@media all and (min-width: 720px) {
+@media all and (min-width: 560px) {
     .image-align {
-        width: 50%;
+        max-width: 50%;
     }
 }
-@media all and (max-width: 720px) {
+@media all and (max-width: 560px) {
     .image-align {
         width: 100%;
     }
