POWR-298 remove unused class

--- a/web/themes/custom/cloudy/templates/navigation/menu--main.html.twig
+++ b/web/themes/custom/cloudy/templates/navigation/menu--main.html.twig
@@ -30,7 +30,7 @@
   {% import _self as menus %}
   {% if items %}
     {% if menu_level == 0 %}
-      <ul{{ attributes.addClass('nav navbar-nav float-right') }}>
+      <ul{{ attributes.addClass('nav navbar-nav') }}>
     {% else %}
       <ul class="dropdown-menu">
     {% endif %}
