POWR-298 role, markup, and menu button updates
Removed role on the header element since it is implied.
Removed unnecessary div around the site logo.
Updated mobile menu toggle from fa icon to Menu.

--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -69,17 +69,15 @@
 #}
 <div id="page-wrapper">
   <div id="page">
-    <header id="header" class="header" role="banner" aria-label="{{ 'Site header'|t}}">
+    <header id="header" class="header" aria-label="{{ 'Site header'|t}}">
       {% block head %}
         <nav{{ navbar_attributes }}>
           {% if container_navbar %}
           <div class="container">
           {% endif %}
-            <div class="navbar-brand">
-              {{ page.header }}
-            </div>
+            {{ page.header }}
             {% if page.primary_menu or page.header_form %}
-              <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+              <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#CollapsingNavbar" aria-controls="CollapsingNavbar" aria-expanded="false" aria-label="Toggle navigation">Menu</button>
               <div class="collapse navbar-collapse" id="CollapsingNavbar">
                 {{ page.primary_menu }}
                 {% if page.header_form %}
