POWR-298 add link states mixin

--- a/web/themes/custom/cloudy/scss/mixins.scss
+++ b/web/themes/custom/cloudy/scss/mixins.scss
@@ -5,14 +5,32 @@
 //
 @each $color,
 $value in $theme-colors {
-    .btn-#{$color} a {
-        @include button-variant($value, $value);
-    }
+  .btn-#{$color} a {
+    @include button-variant($value, $value);
+  }
 }
 
 @each $color,
 $value in $theme-colors {
-    .btn-outline-#{$color} a {
-        @include button-outline-variant($value);
-    }
+  .btn-outline-#{$color} a {
+    @include button-outline-variant($value);
+  }
+}
+
+//
+// Link states
+//
+@mixin links ($link, $visited, $hover, $active) {
+  & {
+      color: $link;
+      &:visited {
+          color: $visited;
+      }
+      &:hover {
+          color: $hover;
+      }
+      &:active, &:focus {
+          color: $active;
+      }
+  }
 }
