POWR-298 site header styles

--- a/web/themes/custom/cloudy/scss/components/header.scss
+++ b/web/themes/custom/cloudy/scss/components/header.scss
@@ -44,6 +44,50 @@
 
 .header {
     background-color: $primary-shade;
-    border-top: 3px $accent-shade solid; 
+    border-top: 3px $accent-shade solid;
     border-bottom: 3px $yellow solid;
+}
+
+.navbar {
+  padding: 0;
+  min-height: 80px;
+  .navbar-brand {
+    padding: 0 1rem;
+    height: 80px;
+    display: flex;
+    align-items: center;
+    img {
+      max-height: 40px;
+    }
+  }
+  .navbar-toggler {
+    padding: 26.5px 1rem;
+    line-height: 27px;
+    border: none;
+    color: $white;
+  }
+  .navbar-nav .nav-link {
+    padding: 1rem;
+    color: $white;
+    @include links($white, $white, $white, $white);
+  }
+}
+
+@include media-breakpoint-up(lg) {
+  .navbar {
+    .navbar-brand img {
+      max-height: 50px;
+    }
+    .navbar-collapse {
+      justify-content: flex-end;
+    }
+    .navbar-nav .nav-link {
+      padding: 26.5px 1rem;
+      line-height: 27px;
+      transition: background-color 0.25s ease, font-size 0.25s ease;
+      &:hover {
+        background-color: darken($green, 3%);
+      }
+    }
+  }
 }
