POWR-272 Refactor service mode templating out of node template

--- a/web/themes/custom/cloudy/templates/content/node--city-service.html.twig
+++ b/web/themes/custom/cloudy/templates/content/node--city-service.html.twig
@@ -93,41 +93,7 @@
       </div>
     {% endif %}
   </header>
-  {{ content.field_summary }}
-  {{ content.field_time_to_complete }}
   <div{{ content_attributes.addClass('node__content', 'clearfix') }}>
-    <ul class="nav nav-tabs" id="serviceModes" role="tablist">
-      {% for key, item in content.field_service_mode if key|first != '#' %}
-        <li class="nav-item">
-          <a class="nav-link{% if loop.first %} active{% endif %} " id="{{ loop.index }}-tab" data-toggle="tab" href="#{{ loop.index }}" role="tab" aria-controls="{{ loop.index }}"{% if loop.first %}  aria-selected="true"{% endif %}>
-          {{ item['#paragraph'].field_service_modes.entity.name.value }}
-          </a>
-        </li>
-      {% endfor %}
-    </ul>
-    <div class="tab-content" id="serviceModesContent">
-      {% for key, item in content.field_service_mode if key|first != '#' %}
-        <div class="tab-pane fade{% if loop.first %} show active{% endif %}" id="{{ loop.index }}" role="tabpanel" aria-labelledby="{{ loop.index }}-tab">
-          {% if item['#paragraph'].field_step_by_step_instructions|length == 1 %}
-            {% for step in item['#paragraph'].field_step_by_step_instructions %}
-              <div class="onestep">{{ drupal_entity('paragraph', step.target_id) }}</div>
-            {% endfor %}
-          {% else %}
-            <ol class="steps">
-            {% for step in item['#paragraph'].field_step_by_step_instructions %}
-              <li class="step">{{ drupal_entity('paragraph', step.target_id) }}</li>
-            {% endfor %}
-            </ol>
-          {% endif %}
-        </div>
-      {% endfor %}
-    </div>
+    {{ content }}
   </div>
-  {# Hide hr now that these fields are disabled
-  <hr />
-  #}
-  {{ content.field_audience }}
-  {{ content.field_related_services }}
-  {{ content.field_community_actions }}
-  {{ content.field_topics }}
 </article>
