POWR-272 Fix aria-controls attribute

--- a/web/themes/custom/cloudy/templates/field/field--field-service-mode.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--field-service-mode.html.twig
@@ -22,7 +22,7 @@
 <ul class="nav nav-tabs" id="serviceModes" role="tablist">
   {% for item in items if key|first != '#' %}
     <li class="nav-item">
-      <a class="nav-link{% if loop.first %} active{% endif %} " id="tab-{{ loop.index }}" data-toggle="tab" href="#pane-{{ loop.index }}" role="tab" aria-controls="{{ loop.index }}"{% if loop.first %}  aria-selected="true"{% endif %}>
+      <a class="nav-link{% if loop.first %} active{% endif %} " id="tab-{{ loop.index }}" data-toggle="tab" href="#pane-{{ loop.index }}" role="tab" aria-controls="pane-{{ loop.index }}"{% if loop.first %}  aria-selected="true"{% endif %}>
       {{ item.content['#paragraph'].field_service_modes.entity.name.value }}
       </a>
     </li>
