--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -8138,7 +8138,8 @@ li.step h3.step-title {
   position: relative;
   margin-left: 4rem; }
 
-.field--name-field-step-instruction, .field--name-field-step-action-button {
+li.step .field--name-field-step-instruction, li.step .field--name-field-step-action-button {
+  position: relative;
   margin-left: 4rem; }
 
 ol.steps dl, ol.steps ol, ol.steps ul {
