POWR-243 Update style for alert for new template

--- a/web/themes/custom/cloudy/scss/components/alerts.scss
+++ b/web/themes/custom/cloudy/scss/components/alerts.scss
@@ -5,19 +5,17 @@
 
 .portland-alert {
   .close {
-    font-size: 2.5rem;
+    font-size: 2rem;
+    color: inherit;
+    opacity: 1;
+    text-shadow: none;
+    &:not(:disabled):not(.disabled):hover {
+      color: inherit;
+      opacity: 1;
+    }
   }
   .fa {
-    font-size: 3rem;
-    &.fa-exclamation-circle {
-      color: $red;
-    }
-    &.fa-exclamation-triangle {
-      color: $yellow;
-    }
-    &.fa-info-circle {
-      color: $accent-shade;
-    }
+    font-size: 2rem;
   }
 }
 
