POWR-243 Add more styling to the alert template

--- a/web/modules/custom/portland/templates/portland-alert.html.twig
+++ b/web/modules/custom/portland/templates/portland-alert.html.twig
@@ -35,6 +35,7 @@
   'card-header',
   'd-flex',
   'align-items-center',
+  'font-weight-bold',
   type == '10' ? 'bg-danger' : '',
   type == '10' ? 'text-white' : '',
   type == '20' ? 'bg-warning' : '',
@@ -54,9 +55,10 @@
 
 {% set link_attribute = create_attribute() %}
 {% set link_classes = [
-  'mt-2',
+  'mt-4',
   'btn',
   'btn-block',
+  'col-md-8',
   type == '10' ? 'btn-danger' : '',
   type == '20' ? 'btn-warning' : '',
   type == '30' ? 'btn-outline-secondary' :'',
@@ -82,9 +84,11 @@
       {{ text }}
     </div>
     {% if link_url %}
-      <a{{ link_attribute.addClass(link_classes).setAttribute('href', link_url) }}>
-        {{ link_text }}
-      </a>
+      <div class="d-flex justify-content-around">
+        <a{{ link_attribute.addClass(link_classes).setAttribute('href', link_url) }}>
+          {{ link_text }}
+        </a>
+      </div>
     {% endif %}
   </div>
 </div>
