POWR-243 Allow button text to wrap on alerts

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -6427,6 +6427,9 @@ a.text-dark:hover, a.text-dark:focus {
 .portland-alert .fa {
   font-size: 2rem; }
 
+.portland-alert .btn {
+  white-space: inherit; }
+
 /**
  * @file
  * Bootstrap Barrio specific styling for the Book module.
