--- a/web/themes/custom/cloudy/templates/block/block--system-branding-block.html.twig
+++ b/web/themes/custom/cloudy/templates/block/block--system-branding-block.html.twig
@@ -14,7 +14,7 @@
 #}
 {% set attributes = attributes.addClass('site-branding') %}
   {% if site_logo or site_name %}
-    <a href="{{ path('<front>') }}" title="{{ 'Go to the homepage of the City of Portland Oregon'|t }}" rel="home" class="navbar-brand">
+    <a href="{{ path('<front>') }}" title="{{ 'Go to the homepage of the City of Portland Oregon'|t }}" rel="home" class="navbar-brand d-flex align-items-center px-3">
       {% if site_logo %}
         <img src="{{ site_logo }}" alt="{{ 'Portland Oregon'|t }}" class="img-fluid d-inline-block align-top" />
       {% endif %}
