POWR-343 Update main nav link hover background color

--- a/web/themes/custom/cloudy/scss/components/header.scss
+++ b/web/themes/custom/cloudy/scss/components/header.scss
@@ -75,7 +75,7 @@
       line-height: 27px;
       transition: background-color 0.25s ease, font-size 0.25s ease;
       &:hover {
-        background-color: darken($green, 3%);
+        background-color: rgba($black, 0.15);
       }
     }
   }
