--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -7313,9 +7313,6 @@ summary {
 #navbar-top.navbar-light .nav-link {
   color: rgba(0, 0, 0, 0.5); }
 
-.navbar-brand .site-logo {
-  margin-right: 1rem; }
-
 @media (max-width: 33.9em) {
   .navbar-toggleable-xs .navbar-nav .nav-item + .nav-item,
   .navbar-toggleable-xs.collapse.in .navbar-nav .nav-item {
@@ -7337,16 +7334,12 @@ summary {
   padding: 0;
   min-height: 80px; }
   .navbar .navbar-brand {
-    padding: 0 1rem;
-    height: 80px;
-    display: flex;
-    align-items: center; }
+    height: 80px; }
     .navbar .navbar-brand img {
       max-height: 40px; }
   .navbar .navbar-toggler {
     padding: 26.5px 1rem;
     line-height: 27px;
-    border: none;
     color: #fff; }
   .navbar .navbar-nav .nav-link {
     padding: 1rem;
@@ -7363,14 +7356,12 @@ summary {
 @media (min-width: 992px) {
   .navbar .navbar-brand img {
     max-height: 50px; }
-  .navbar .navbar-collapse {
-    justify-content: flex-end; }
   .navbar .navbar-nav .nav-link {
     padding: 26.5px 1rem;
     line-height: 27px;
     transition: background-color 0.25s ease, font-size 0.25s ease; }
     .navbar .navbar-nav .nav-link:hover {
-      background-color: #035b30; } }
+      background-color: rgba(0, 0, 0, 0.15); } }
 
 /**
  * @file
