POWR-291 follow ups on the display modes of each content type.

--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -141,7 +141,8 @@ li.step h3.step-title {
   margin-left: 4rem;
 }
 
-.field--name-field-step-instruction, .field--name-field-step-action-button {
+li.step .field--name-field-step-instruction, li.step .field--name-field-step-action-button {
+  position: relative;
   margin-left: 4rem;
 }
 
