POWR-264 Update document details page view. Set FA icons.

--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--document.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--document.html.twig
@@ -1,7 +1,6 @@
 {% extends 'paragraph.html.twig' %}
 {% block content %}
-{{ content }}
-{{ paragraph.field_document.entity.field_document.entity.getFileName() }}
-{{ paragraph.field_document.entity.field_document.entity.getMimeType() }}
-{{ paragraph.field_document.entity.field_document.entity.getSize() }}
+<a class="fas fa-{{ fontawesomeIcon }}-o" href="{{ fileUrl }}">
+{{ paragraph.field_document.entity.getName() }}
+</a> ({{ fileSize }})
 {% endblock %}
