--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -7616,12 +7616,16 @@ summary {
 input[type="search"] {
   box-sizing: border-box; }
 
-header #search-block-form {
-  padding: 5px 15px;
-  flex-flow: row wrap; }
-
-#search-block-form {
+#search-api-page-block-form {
+  padding: 1rem;
+  flex-flow: row wrap;
   display: flex; }
+
+.region-featured-top {
+  width: 100%; }
+
+.region-featured-top #search-api-page-block-form {
+  width: 100%; }
 
 /**
  * @file
