--- a/web/themes/custom/cloudy/scss/components/search-form.scss
+++ b/web/themes/custom/cloudy/scss/components/search-form.scss
@@ -7,11 +7,16 @@ input[type="search"] {
     box-sizing: border-box;
 }
 
-header #search-block-form {
-    padding: 5px 15px;
+#search-api-page-block-form {
+    padding: 1rem;
     flex-flow: row wrap;
+    display: flex;
 }
 
-#search-block-form {
-    display: flex;
+.region-featured-top {
+    width: 100%;
+}
+
+.region-featured-top #search-api-page-block-form {
+    width: 100%;
 }
