POWR-134 Add padding for video.

--- a/web/themes/custom/cloudy/scss/components/field.scss
+++ b/web/themes/custom/cloudy/scss/components/field.scss
@@ -124,11 +124,13 @@
     }
 }
 @media all and (max-width: 560px) {
-    .image-align .video-align{
+    .image-align, .video-align{
         width: 100%;
     }
 }
 
 div.paragraph--type--video figure.figure {
     width: 100%;
+    padding-left: 15px;
+    padding-right: 15px;
 }
