--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -7220,11 +7220,13 @@ summary {
     width: 50%; } }
 
 @media all and (max-width: 560px) {
-  .image-align .video-align {
+  .image-align, .video-align {
     width: 100%; } }
 
 div.paragraph--type--video figure.figure {
-  width: 100%; }
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px; }
 
 /**
  * @file
