POWR-265 adding quote paragraph type and basic theme updates to allow for alignment.

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -7217,10 +7217,12 @@ summary {
   .image-align {
     max-width: 50%; }
   .video-align {
+    width: 50%; }
+  .quote-align {
     width: 50%; } }
 
 @media all and (max-width: 560px) {
-  .image-align, .video-align {
+  .image-align, .video-align, .quote-align {
     width: 100%; } }
 
 div.paragraph--type--video figure.figure {
@@ -8282,3 +8284,7 @@ div.portland-alert {
 
 div.paragraph--type--document {
   margin-bottom: 1rem; }
+
+blockquote.blockquote {
+  border-left: 5px solid #dee2e6;
+  padding-left: 1rem; }
