--- a/web/themes/custom/cloudy/scss/components/field.scss
+++ b/web/themes/custom/cloudy/scss/components/field.scss
@@ -122,9 +122,12 @@
     .video-align {
         width: 50%;
     }
+    .quote-align {
+        width: 50%;
+    }
 }
 @media all and (max-width: 560px) {
-    .image-align, .video-align{
+    .image-align, .video-align, .quote-align{
         width: 100%;
     }
 }
