--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -322,3 +322,8 @@ div.portland-alert {
 div.paragraph--type--document {
   margin-bottom: 1rem;
 }
+
+blockquote.blockquote {
+  border-left: 5px solid $gray-300;
+  padding-left: 1rem;
+}
