POWR-311 Add group banner for media entities

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -29,7 +29,7 @@ h3, .h3 {
   font-size: 1.42383rem; }
 
 h4, .h4 {
-  font-size: 1.26562rem; }
+  font-size: 1.26563rem; }
 
 h5, .h5 {
   font-size: 1.125rem; }
@@ -8095,19 +8095,24 @@ a {
 .slick > div {
   margin: 0 15px; }
 
+.view-group-media-banner,
 .view-group-content-banner,
 .view-group-banner {
   padding: .5rem 1rem; }
 
+.view-group-media-banner .views-row,
 .view-group-content-banner .views-row,
 .view-group-banner .views-row {
   display: flex;
   align-items: center; }
 
+.view-group-media-banner .views-row .views-field img,
 .view-group-content-banner .views-row .views-field img,
 .view-group-banner .views-row .views-field img {
   margin-right: 1rem; }
 
+.view-group-media-banner .views-field a,
+.view-group-media-banner .views-field a:hover,
 .view-group-content-banner .views-field a,
 .view-group-content-banner .views-field a:hover,
 .view-group-banner .views-field a,
