--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -60,23 +60,27 @@ a {
 }
 
 // Groups
-
+.view-group-media-banner,
 .view-group-content-banner,
 .view-group-banner {
   padding: .5rem 1rem;
 }
 
+.view-group-media-banner .views-row,
 .view-group-content-banner .views-row,
 .view-group-banner .views-row {
   display: flex;
   align-items: center;
 }
 
+.view-group-media-banner .views-row .views-field img,
 .view-group-content-banner .views-row .views-field img,
 .view-group-banner .views-row .views-field img {
   margin-right: 1rem;
 }
 
+.view-group-media-banner .views-field a,
+.view-group-media-banner .views-field a:hover,
 .view-group-content-banner .views-field a,
 .view-group-content-banner .views-field a:hover,
 .view-group-banner .views-field a,
