--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -9,7 +9,7 @@ Description: Bootstrap 4 with Sass
 @import url("//fonts.googleapis.com/css?family=Open+Sans:300,400,300italic,400italic");
 @import url("//fonts.googleapis.com/css?family=Merriweather:400,700");
 /* Font Awesome Icons */
-@import url("//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
+/* @import url("//maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"); */
 html {
   font-size: 14px; }
   @media (min-width: 768px) {
@@ -29,7 +29,7 @@ h3, .h3 {
   font-size: 1.42383rem; }
 
 h4, .h4 {
-  font-size: 1.26562rem; }
+  font-size: 1.26563rem; }
 
 h5, .h5 {
   font-size: 1.125rem; }
@@ -8176,7 +8176,6 @@ ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
   margin-bottom: 0; }
 
 p.time-to-complete:before {
-  font-family: FontAwesome;
   display: inline-block;
   padding-right: 0.5rem;
   vertical-align: middle;
@@ -8190,30 +8189,35 @@ p.time-to-complete:before {
   background: #034E29; }
 
 *[class*="btn--"]:before {
-  font-family: FontAwesome;
   display: inline-block;
   padding-right: 0.5rem;
   vertical-align: middle; }
 
 .btn--call:before {
+  font-family: "Font Awesome 5 Free";
   content: "\f095"; }
 
 .btn--directions:before {
+  font-family: "Font Awesome 5 Free";
   content: "\f041"; }
 
 .btn--download:before {
+  font-family: "Font Awesome 5 Free";
   content: "\f019"; }
 
 .btn--email:before {
+  font-family: "Font Awesome 5 Free";
   content: "\f0e0"; }
 
 .btn--fax:before {
+  font-family: "Font Awesome 5 Free";
   content: "\f1ac"; }
 
 .btn--fax:not(.disabled):hover {
   cursor: default; }
 
 .btn--form:before {
+  font-family: "Font Awesome 5 Free";
   content: "\f022"; }
 
 .form-actions button.btn {
@@ -8235,7 +8239,6 @@ td .form-check-input {
   padding-left: 1.8rem; }
 
 .fas:before {
-  font-family: FontAwesome;
   vertical-align: middle; }
 
 .topic h3 .fas:before {
@@ -8302,3 +8305,17 @@ div.paragraph--type--document {
 blockquote.blockquote {
   border-left: 5px solid #dee2e6;
   padding-left: 1rem; }
+
+span.ext {
+  font-weight: 900;
+  background: none;
+  width: 0px;
+  height: 0px;
+  padding-right: 0px; }
+
+span.ext:before {
+  font-family: "Font Awesome 5 Free";
+  content: "\f35d";
+  display: inline-block;
+  padding-left: 0.5rem;
+  vertical-align: middle; }
