--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -160,7 +160,6 @@ ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
 }
 
 p.time-to-complete:before {
- font-family: FontAwesome;
  display: inline-block;
  padding-right: 0.5rem;
  vertical-align: middle;
@@ -179,29 +178,33 @@ p.time-to-complete:before {
 }
 
 *[class*="btn--"]:before {
-  font-family: FontAwesome;
   display: inline-block;
   padding-right: 0.5rem;
   vertical-align: middle;
 }
 
 .btn--call:before {
+  font-family: "Font Awesome 5 Free";
   content: "\f095";
 }
 
 .btn--directions:before {
+  font-family: "Font Awesome 5 Free";
   content: "\f041";
 }
 
 .btn--download:before {
+  font-family: "Font Awesome 5 Free";
   content: "\f019";
 }
 
 .btn--email:before {
+  font-family: "Font Awesome 5 Free";
   content: "\f0e0";
 }
 
 .btn--fax:before {
+  font-family: "Font Awesome 5 Free";
   content: "\f1ac";
 }
 
@@ -210,6 +213,7 @@ p.time-to-complete:before {
 }
 
 .btn--form:before {
+  font-family: "Font Awesome 5 Free";
   content: "\f022";
 }
 
@@ -241,7 +245,6 @@ td .form-check-input {
 }
 
 .fas:before {
-  font-family: FontAwesome;
   vertical-align: middle;
 }
 
@@ -326,4 +329,20 @@ div.paragraph--type--document {
 blockquote.blockquote {
   border-left: 5px solid $gray-300;
   padding-left: 1rem;
+}
+
+span.ext {
+  font-weight: 900;
+  background: none;
+  width: 0px;
+  height: 0px;
+  padding-right: 0px;
+}
+
+span.ext:before {
+  font-family: "Font Awesome 5 Free";
+  content: "\f35d";
+  display: inline-block;
+  padding-left: 0.5rem;
+  vertical-align: middle;
 }
