POWR-263 update homepage views and styles

--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -229,45 +229,23 @@ td .form-check-input {
 
 // Homepage customizations
 
+.audience,
+.community-action {
+  font-size: $font-size-xl;
+}
+
 .topic {
   margin-bottom: .5rem;
 }
 
 .topic h3 {
   font-size: $font-size-lg;
-  padding-left: 1.8rem;
+  font-family: $font-family-sans-serif;
   margin-bottom: .5rem;
 }
 
 .topic p {
   font-size: $font-size-sm;
-  padding-left: 1.8rem;
-}
-
-.fas:before {
-  vertical-align: middle;
-}
-
-.topic h3 .fas:before {
-  position: absolute;
-  top: 3px;
-  left: 15px;
-}
-
-.community-action .fas:before,
-.audience .fas:before {
-  font-size: $h1-font-size;
-  padding-right: 1.25rem;
-  color: $gray-600;
-}
-
-.audience a, .community-action a {
-  font-size: $font-size-lg;
-  color: $link-color;
-}
-
-a.community-action, a.topic, a.audience{
-  font-weight: 400 !important;
 }
 
 .region-primary-menu {
@@ -329,20 +307,4 @@ div.paragraph--type--document {
 blockquote.blockquote {
   border-left: 5px solid $gray-300;
   padding-left: 1rem;
-}
-
-span.ext {
-  font-weight: 900;
-  background: none;
-  width: 0px;
-  height: 0px;
-  padding-right: 0px;
-}
-
-span.ext:before {
-  font-family: "Font Awesome 5 Free";
-  content: "\f35d";
-  display: inline-block;
-  padding-left: 0.5rem;
-  vertical-align: middle;
 }
