--- a/web/themes/custom/cloudy/scss/typography.scss
+++ b/web/themes/custom/cloudy/scss/typography.scss
@@ -176,6 +176,7 @@ html {
 	@include create-heading-type-scale(minor-third);
 }
 
+$font-size-xl:								($font-size-base * 1.125 * 1.125);
 $font-size-lg:                ($font-size-base * 1.125);
 $font-size-sm:                ($font-size-base / 1.125);
 
