POWR-263 configure extlink and add css for FA psuedos.

--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -168,6 +168,10 @@ p.time-to-complete:before {
 
 // Form buttons
 
+.btn {
+  margin-bottom: 1rem;
+}
+
 .btn-secondary {
   background: #046A38;
   border: none;
@@ -307,4 +311,33 @@ div.paragraph--type--document {
 blockquote.blockquote {
   border-left: 5px solid $gray-300;
   padding-left: 1rem;
+}
+
+// External links
+
+span.ext::before {
+  display: inline-block;
+  vertical-align: middle;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 Free"; 
+  font-size: $font-size-sm;
+  font-weight: 900; 
+  padding-left: .5rem;
+  content: "\f35d";
+}
+
+span.mailto::before {
+  background:none;
+}
+
+/* Hide the extra spans when printing. */
+@media print {
+  span.ext,
+  span.mailto {
+    display: none;
+    padding: 0;
+  }
 }
