--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -8181,6 +8181,9 @@ p.time-to-complete:before {
   vertical-align: middle;
   content: "\f017"; }
 
+.btn {
+  margin-bottom: 1rem; }
+
 .btn-secondary {
   background: #046A38;
   border: none; }
@@ -8226,38 +8229,20 @@ p.time-to-complete:before {
 td .form-check-input {
   margin-left: 0rem; }
 
+.audience,
+.community-action {
+  font-size: 1.26562rem; }
+
 .topic {
   margin-bottom: .5rem; }
 
 .topic h3 {
   font-size: 1.125rem;
-  padding-left: 1.8rem;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
   margin-bottom: .5rem; }
 
 .topic p {
-  font-size: 0.88889rem;
-  padding-left: 1.8rem; }
-
-.fas:before {
-  vertical-align: middle; }
-
-.topic h3 .fas:before {
-  position: absolute;
-  top: 3px;
-  left: 15px; }
-
-.community-action .fas:before,
-.audience .fas:before {
-  font-size: 2.5rem;
-  padding-right: 1.25rem;
-  color: #6c757d; }
-
-.audience a, .community-action a {
-  font-size: 1.125rem;
-  color: #1b5a99; }
-
-a.community-action, a.topic, a.audience {
-  font-weight: 400 !important; }
+  font-size: 0.88889rem; }
 
 .region-primary-menu {
   margin-left: 1rem;
@@ -8306,16 +8291,25 @@ blockquote.blockquote {
   border-left: 5px solid #dee2e6;
   padding-left: 1rem; }
 
-span.ext {
-  font-weight: 900;
-  background: none;
-  width: 0px;
-  height: 0px;
-  padding-right: 0px; }
-
-span.ext:before {
-  font-family: "Font Awesome 5 Free";
-  content: "\f35d";
+span.ext::before {
   display: inline-block;
-  padding-left: 0.5rem;
-  vertical-align: middle; }
+  vertical-align: middle;
+  font-style: normal;
+  font-variant: normal;
+  text-rendering: auto;
+  -webkit-font-smoothing: antialiased;
+  font-family: "Font Awesome 5 Free";
+  font-size: 0.88889rem;
+  font-weight: 900;
+  padding-left: .5rem;
+  content: "\f35d"; }
+
+span.mailto::before {
+  background: none; }
+
+/* Hide the extra spans when printing. */
+@media print {
+  span.ext,
+  span.mailto {
+    display: none;
+    padding: 0; } }
