--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--document.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--document.html.twig
@@ -1,6 +1,6 @@
 {% extends 'paragraph.html.twig' %}
 {% block content %}
-<a class="fas fa-{{ fontawesomeIcon }}-o" href="{{ fileUrl }}">
-{{ paragraph.field_document.entity.getName() }}
+<a href="{{ fileUrl }}">
+<i  class="fas fa-{{ fontawesomeIcon }}"></i> {{ paragraph.field_document.entity.getName() }}
 </a> ({{ fileSize }})
 {% endblock %}
