POWR-387 clean up fields after correcting data in alpha

--- a/web/themes/custom/cloudy/templates/field/field--node--field-get-directions.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--node--field-get-directions.html.twig
@@ -64,7 +64,7 @@
     {% else %}
         {% for item in items %}
             <div{{ attributes.addClass(classes, 'field__item') }}>
-                <a class="btn btn-secondary btn--directions" href="{{ item.content['#url'].toString() }}">{{ item.content['#title'] }}</a>
+                <a class="btn btn-secondary" href="{{ item.content['#url'].toString() }}"><i class="fas fa-map-marker-alt"></i> {{ item.content['#title'] }}</a>
             </div>
         {% endfor %}
     {% endif %}
