--- a/web/themes/custom/cloudy/templates/field/field--node--field-time-to-complete.html.twig
+++ b/web/themes/custom/cloudy/templates/field/field--node--field-time-to-complete.html.twig
@@ -24,8 +24,8 @@
     'time-to-complete'
   ]
 %}
+{%- for item in items -%}
 <p{{ attributes.addClass(classes) }}>
-  {%- for item in items -%}
-    {{ item.content }}
-  {%- endfor -%}
+  <i class="fas fa-clock"></i> {{ item.content }}
 </p>
+{%- endfor -%}
