--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--email-button.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--email-button.html.twig
@@ -1,6 +1,6 @@
 {% extends 'paragraph.html.twig' %}
 {% block content %}
-    <a class="btn btn-primary btn--email" href="{{ content.field_email_link[0]['#url'].toString() }}" role="button">
-        {{ content.field_email_text[0]['#context']['value']|lower }}
+    <a class="btn btn-primary" href="{{ content.field_email_link[0]['#url'].toString() }}" role="button">
+        <i class="fas fa-envelope"></i> {{ content.field_email_text[0]['#context']['value']|lower }}
     </a>
 {% endblock %}
