--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--fax-button.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--fax-button.html.twig
@@ -1,5 +1,5 @@
 {% extends 'paragraph.html.twig' %} {% block content %}
-  <span class="btn btn-primary btn--fax">
-    {{ content.field_fax_number[0] }}
+  <span class="btn btn-primary">
+    <i class="fas fa-fax"></i> {{ content.field_fax_number[0] }}
   </span>
 {% endblock %}
