POWR-94 - Fixed bugs: caption not displaying, Audio Url label should not be visible, audio and video players different sizes.

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -7237,7 +7237,7 @@ summary {
   .image-align, .video-align, .quote-align {
     width: 100%; } }
 
-div.paragraph--type--video figure.figure {
+div.paragraph--type--video figure.figure, div.paragraph--type--audio figure.figure {
   width: 100%;
   padding-left: 15px;
   padding-right: 15px; }
