--- a/web/themes/custom/cloudy/scss/components/field.scss
+++ b/web/themes/custom/cloudy/scss/components/field.scss
@@ -132,7 +132,7 @@
     }
 }
 
-div.paragraph--type--video figure.figure {
+div.paragraph--type--video figure.figure, div.paragraph--type--audio figure.figure {
     width: 100%;
     padding-left: 15px;
     padding-right: 15px;
