POWR-351 Update search block styles

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -8204,6 +8204,9 @@ ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
 .form-actions button.btn {
   margin-right: .5rem; }
 
+form .btn {
+  margin-bottom: 0; }
+
 td .form-check-input {
   margin-left: 0rem; }
 
@@ -8232,9 +8235,6 @@ td .form-check-input {
   min-height: 200px; }
 
 .view-header {
-  margin-bottom: 1rem; }
-
-.form-inline {
   margin-bottom: 1rem; }
 
 .form-inline label {
