--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -159,7 +159,7 @@ ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
   margin-bottom: 0;
 }
 
-// Form buttons
+// Paragraph buttons
 
 .btn {
   margin-bottom: 1rem;
@@ -196,6 +196,12 @@ ol.steps ol ol, ol.steps ol ul, ol.steps ul ol, ol.steps ul ul {
 
 .form-actions button.btn {
   margin-right: .5rem;
+}
+
+// Form buttons
+
+form .btn {
+  margin-bottom: 0;
 }
 
 // Form check input
@@ -237,10 +243,6 @@ td .form-check-input {
 }
 
 .view-header {
-  margin-bottom: 1rem;
-}
-
-.form-inline {
   margin-bottom: 1rem;
 }
 
@@ -295,9 +297,9 @@ span.ext::before {
   font-variant: normal;
   text-rendering: auto;
   -webkit-font-smoothing: antialiased;
-  font-family: "Font Awesome 5 Free"; 
+  font-family: "Font Awesome 5 Free";
   font-size: $font-size-sm;
-  font-weight: 900; 
+  font-weight: 900;
   padding-left: .5rem;
   content: "\f35d";
 }
