--- a/web/themes/custom/cloudy/templates/portland-search-form.html.twig
+++ b/web/themes/custom/cloudy/templates/portland-search-form.html.twig
@@ -1,6 +1,6 @@
 {% set classes = [
   'input-group',
-  size == 'big' ? 'input-group-lg' : '',
+  size == 'big' ? 'input-group-lg mt-5 mb-5' : '',
   size == 'small' ? 'input-group-sm' : '',
 ] %}
 
