POWR-374 - initial commit, added link style field to telephone and fax paragraphs, updated paragraph templates to output in intl tel format and use link style classes, replaced Phone field with Telephone paragraph in group contact info, updated help text, updated Cleave.js config to use hyphen delmiter.

--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--fax-button.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--fax-button.html.twig
@@ -1,5 +1,5 @@
 {% extends 'paragraph.html.twig' %} {% block content %}
-  <span class="btn btn-primary">
-    <i class="fas fa-fax"></i> {{ content.field_fax_number[0] }}
+  <span class="btn fax btn-{{ content.field_link_style[0] ? content.field_link_style[0] : 'primary' }}">
+    <i class="fas fa-fax"></i> +1 {{ content.field_fax_number[0] }}
   </span>
 {% endblock %}
