--- a/web/themes/custom/cloudy/templates/paragraphs/paragraph--telephone-button.html.twig
+++ b/web/themes/custom/cloudy/templates/paragraphs/paragraph--telephone-button.html.twig
@@ -1,6 +1,6 @@
 {% extends 'paragraph.html.twig' %}
 {% block content %}
-    <a class="btn btn-primary" href="tel:{{ content.field_phone_number[0] }}" role="button">
+    <a class="btn btn-{{ content.field_link_style[0] ? content.field_link_style[0] : 'primary' }}" href="tel:+1 {{ content.field_phone_number[0] }}" role="button">
         <i class="fas fa-phone"></i> {{ content.field_phone_number[0] }}
     </a>
 {% endblock %}
