POWR-388 Adjust top searches margins and padding, add action button and description to view, change max num of displayed results, adjust permissions and no results text.

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -29,7 +29,7 @@ h3, .h3 {
   font-size: 1.42383rem; }
 
 h4, .h4 {
-  font-size: 1.26562rem; }
+  font-size: 1.26563rem; }
 
 h5, .h5 {
   font-size: 1.125rem; }
@@ -7637,7 +7637,8 @@ input[type="search"] {
   width: 100%; }
 
 .region-featured-top #search-api-page-block-form {
-  width: 100%; }
+  width: 100%;
+  padding-bottom: 0.2rem; }
 
 /**
  * @file
@@ -8212,7 +8213,7 @@ td .form-check-input {
 
 .audience,
 .community-action {
-  font-size: 1.26562rem; }
+  font-size: 1.26563rem; }
 
 .topic {
   margin-bottom: .5rem; }
