POWR-412 intial bulk edit admin views, admin tab changes

--- a/web/themes/custom/cloudy/scss/components/field.scss
+++ b/web/themes/custom/cloudy/scss/components/field.scss
@@ -9,7 +9,7 @@
 }
 
 .field--type-entity-reference .field__label {
-    font-weight: normal;
+    font-weight: 400;
     margin: 0;
     padding-right: ($spacer * .3);
     /* LTR */
@@ -70,7 +70,7 @@
 }
 
 .field--name-field-tags .field__label {
-    font-weight: normal;
+    font-weight: 400;
     margin: 0;
     padding-right: 5px;
     /* LTR */
