--- a/web/themes/custom/cloudy/scss/components/user.scss
+++ b/web/themes/custom/cloudy/scss/components/user.scss
@@ -70,12 +70,12 @@
 
 .password-confirm .ok {
     color: theme-color("success");
-    font-weight: bold;
+    font-weight: 400;
 }
 
 .password-confirm .error {
     color: theme-color("danger");
-    font-weight: bold;
+    font-weight: 400;
 }
 
 
