--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -11,6 +11,7 @@ Description: Bootstrap 4 with Sass
 
 body {
     background: $white;
+    font-weight: 300;
 }
 
 
@@ -135,7 +136,7 @@ li.step:before {
   font-size: 1.5rem;
   border: 1px #909090 solid;
   color: #505050;
-  font-weight: bold;
+  font-weight: 400;
   padding: .3rem 1rem;
   border-radius: 50%;
 }
