--- a/web/themes/custom/cloudy/templates/layout/page.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/page.html.twig
@@ -114,6 +114,13 @@
         </div>
       {% endblock %}
     {% endif %}
+    {% if page.tabs %}
+      {% block tabs %}
+        <div class="tabs container-fluid bg-light" role="navigation">
+          {{ page.tabs }}
+        </div>
+      {% endblock %}
+    {% endif %}
     <div id="main-wrapper" class="layout-main-wrapper clearfix">
       {% block content %}
         <div id="main" class="{{ container }}">
