--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -365,8 +365,8 @@ template {
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6 {
   margin-bottom: 1rem;
-  font-family: "Merriweather", Georgia, "Times New Roman", Times, serif;
-  font-weight: 500;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-weight: 400;
   line-height: 1.25;
   color: inherit; }
 
@@ -7140,7 +7140,7 @@ summary {
   margin: 0 0 1.2rem; }
 
 .field--type-entity-reference .field__label {
-  font-weight: normal;
+  font-weight: 400;
   margin: 0;
   padding-right: 0.3rem;
   /* LTR */ }
@@ -7189,7 +7189,7 @@ summary {
   margin: 0 0 1.2rem; }
 
 .field--name-field-tags .field__label {
-  font-weight: normal;
+  font-weight: 400;
   margin: 0;
   padding-right: 5px;
   /* LTR */ }
@@ -7857,7 +7857,7 @@ nav.tabs {
   color: #3a3a3a;
   cursor: pointer;
   font-size: 1rem;
-  font-weight: normal;
+  font-weight: 300;
   text-align: center;
   padding: 0.250em 1.063em;
   border-radius: 1em; }
@@ -7918,11 +7918,11 @@ nav.tabs {
 /* Styling for the status indicator of the passwords match test.  */
 .password-confirm .ok {
   color: #046a38;
-  font-weight: bold; }
+  font-weight: 400; }
 
 .password-confirm .error {
   color: #dc3545;
-  font-weight: bold; }
+  font-weight: 400; }
 
 /* Login page stype */
 .page-user-login main .region-content,
@@ -8059,7 +8059,8 @@ nav.tabs {
 /* GENERAL STYLES
 -------------------------------------------------*/
 body {
-  background: #fff; }
+  background: #fff;
+  font-weight: 300; }
 
 /* COLORS
 --------------------------------------------------*/
@@ -8156,7 +8157,7 @@ li.step:before {
   font-size: 1.5rem;
   border: 1px #909090 solid;
   color: #505050;
-  font-weight: bold;
+  font-weight: 400;
   padding: .3rem 1rem;
   border-radius: 50%; }
 
