--- a/web/themes/custom/cloudy/scss/components/ui-dialog.scss
+++ b/web/themes/custom/cloudy/scss/components/ui-dialog.scss
@@ -29,7 +29,7 @@
     color: #3a3a3a;
     cursor: pointer;
     font-size: $font-size-base;
-    font-weight: normal;
+    font-weight: 300;
     text-align: center;
     padding: 0.250em 1.063em;
     border-radius: 1em;
