--- a/web/themes/custom/cloudy/scss/typography.scss
+++ b/web/themes/custom/cloudy/scss/typography.scss
@@ -186,8 +186,8 @@ $line-height-base:        1.5 !default;
 $line-height-computed:    floor(($font-size-base * $line-height-base)) !default;
 
 //** By default, this inherits from the `<body>`.
-$headings-font-family:    $font-family-serif !default;
-$headings-font-weight:    500 !default;
+$headings-font-family:    $font-family-sans-serif !default;
+$headings-font-weight:    400 !default;
 $headings-line-height:    1.25 !default;
 $headings-color:          inherit !default;
 $headings-margin-bottom:  1rem !default;
