POWR-412 update homepage taxonomy blocks and styles

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -7464,6 +7464,12 @@ div.paragraph--type--video figure.figure, div.paragraph--type--audio figure.figu
   padding: 0.75rem 1.25rem 0 0;
   /* LTR */ }
 
+.item-list ul li:last-child {
+  /* This is needed to reset styles in item-list.theme.css */
+  margin: 0;
+  padding: 0.75rem 0 0 0;
+  /* LTR */ }
+
 [dir="rtl"] .item-list ul li {
   /* This is needed to reset [dir="rtl"] styles in item-list.theme.css */
   margin: 0;
@@ -8211,9 +8217,13 @@ form .btn {
 td .form-check-input {
   margin-left: 0rem; }
 
-.audience,
-.community-action {
+.block-region-actions .icon,
+.block-region-audiences .icon {
   font-size: 1.26562rem; }
+
+.block-region-actions .list-group-item-action,
+.block-region-audiences .list-group-item-action {
+  color: #1b5a99; }
 
 .topic {
   margin-bottom: .5rem; }
