--- a/web/themes/custom/cloudy/scss/style.scss
+++ b/web/themes/custom/cloudy/scss/style.scss
@@ -213,11 +213,15 @@ td .form-check-input {
 
 // Homepage customizations
 
-.audience,
-.community-action {
+.block-region-actions .icon,
+.block-region-audiences .icon {
   font-size: $font-size-xl;
 }
 
+.block-region-actions .list-group-item-action,
+.block-region-audiences .list-group-item-action {
+  color: $link-color;
+}
 .topic {
   margin-bottom: .5rem;
 }
