--- a/web/themes/custom/cloudy/templates/layout/cloudy-homepage.html.twig
+++ b/web/themes/custom/cloudy/templates/layout/cloudy-homepage.html.twig
@@ -11,14 +11,8 @@
  *
  */
 #}
-<div class="cloudy-homepage">
-  <div class="row">
-    <div class="col-md-4 p-0">
-      {{ content.actions }}
-      {{ content.audiences }}
-    </div>
-    <div class="col-md-8 p-0">
-      {{ content.topics }}
-    </div>
-  </div>
+<div class="cloudy-homepage container-fluid justify-content-center">
+    {{ content.actions }}
+    {{ content.audiences }}
+    {{ content.topics }}
 </div>
