--- a/web/themes/custom/cloudy/scss/components/item-list.scss
+++ b/web/themes/custom/cloudy/scss/components/item-list.scss
@@ -21,6 +21,13 @@
     /* LTR */
 }
 
+.item-list ul li:last-child {
+    /* This is needed to reset styles in item-list.theme.css */
+    margin: 0;
+    padding: $list-group-item-padding-y 0 0 0;
+    /* LTR */
+}
+
 [dir="rtl"] .item-list ul li {
     /* This is needed to reset [dir="rtl"] styles in item-list.theme.css */
     margin: 0;
