--- a/web/themes/custom/cloudy/templates/form/container.html.twig
+++ b/web/themes/custom/cloudy/templates/form/container.html.twig
@@ -20,8 +20,7 @@
 {%
   set classes = [
     has_parent ? 'js-form-wrapper',
-    has_parent ? 'form-group',
-    'col-auto',
+    has_parent ? 'form-group'
   ]
 %}
 <div{{ attributes.addClass(classes) }}>{{ children }}</div>
