POWR-412 correct list item issue and add some margin to the top of the footer

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -7464,7 +7464,8 @@ div.paragraph--type--video figure.figure, div.paragraph--type--audio figure.figu
   padding: 0.75rem 1.25rem 0 0;
   /* LTR */ }
 
-.item-list ul li:last-child {
+.block-region-actions .item-list ul li:last-child,
+.block-region-audiences .item-list ul li:last-child {
   /* This is needed to reset styles in item-list.theme.css */
   margin: 0;
   padding: 0.75rem 0 0 0;
@@ -7707,7 +7708,8 @@ input[type="search"] {
  * Footer Styling.
  */
 .site-footer {
-  padding: 1rem 0; }
+  padding: 1rem 0;
+  margin: 1rem 0 0; }
   .site-footer .layout-container {
     padding: 0 1rem; }
 
