--- a/web/themes/custom/cloudy/scss/components/item-list.scss
+++ b/web/themes/custom/cloudy/scss/components/item-list.scss
@@ -21,7 +21,8 @@
     /* LTR */
 }
 
-.item-list ul li:last-child {
+.block-region-actions .item-list ul li:last-child,
+.block-region-audiences .item-list ul li:last-child {
     /* This is needed to reset styles in item-list.theme.css */
     margin: 0;
     padding: $list-group-item-padding-y 0 0 0;
