POWR-412 flip header colors and make thicker

--- a/web/themes/custom/cloudy/css/style.css
+++ b/web/themes/custom/cloudy/css/style.css
@@ -7351,8 +7351,8 @@ div.paragraph--type--video figure.figure, div.paragraph--type--audio figure.figu
 
 .header {
   background-color: #046a38;
-  border-top: 3px #418fde solid;
-  border-bottom: 3px #ffb81c solid; }
+  border-top: 5px #ffb81c solid;
+  border-bottom: 5px #418fde solid; }
 
 .navbar {
   padding: 0;
