--- a/web/themes/custom/cloudy/scss/components/header.scss
+++ b/web/themes/custom/cloudy/scss/components/header.scss
@@ -40,8 +40,8 @@
 
 .header {
     background-color: $primary-shade;
-    border-top: 3px $accent-shade solid;
-    border-bottom: 3px $yellow solid;
+    border-top: 5px $yellow solid;
+    border-bottom: 5px $accent-shade solid;
 }
 
 .navbar {
